--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 github.client.id=f6d803ab4899d0fab50a
-github.client.secret=29806d10dd01242b5349216889633178e3b7aef0
+github.client.secret=加密
 github.redirectUri=http://localhost:8080/callback
 spring.datasource.url=jdbc:h2:~/my-forum
 #spring.datasource.username=username
