--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:h2:~/my-forum
 #spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.sundingyi.forum.model
+mybatis.mapper-locations=mapper/*.xml
