--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 github.client.id=f6d803ab4899d0fab50a
-github.client.secret=
-github.redirectUri=http://localhost:8080/callback
+github.client.secret=47f851f865023c1fb73732dbc42174b7a5a0a125
+github.redirectUri=http://192.168.0.115:8080/callback/
 spring.datasource.url=jdbc:h2:~/my-forum
 #spring.datasource.username=username
 #spring.datasource.password=password
