--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.sundingyi.forum.model
 mybatis.mapper-locations=mapper/*.xml
+server.error.path=/error
