--- a/pom.xml
+++ b/pom.xml
@@ -61,17 +61,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.3</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -81,13 +80,16 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>7.9.1</version>
                 <configuration>
-                    <url>jdbc:h2:~/my-forum</url>
+                    <url>jdbc:mysql://localhost:3306/</url>
+                    <user>root</user>
+                    <password>sundingyi</password>
+                    <schemas>forum</schemas>
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>com.h2database</groupId>
-                        <artifactId>h2</artifactId>
-                        <version>1.4.200</version>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>8.0.23</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -104,9 +106,9 @@
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>com.h2database</groupId>
-                        <artifactId>h2</artifactId>
-                        <version>1.4.200</version>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>8.0.23</version>
                     </dependency>
                 </dependencies>
             </plugin>
