--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 github.client.id=f6d803ab4899d0fab50a
-github.client.secret=47f851f865023c1fb73732dbc42174b7a5a0a125
+github.client.secret=f664b28a7c258a383dcb8ef0e8c2032640715cff
 github.redirectUri=http://192.168.0.115:8080/callback/
-spring.datasource.url=jdbc:h2:~/my-forum
-#spring.datasource.username=username
-#spring.datasource.password=password
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/forum
+spring.datasource.username=root
+spring.datasource.password=sundingyi
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.sundingyi.forum.model
 mybatis.mapper-locations=mapper/*.xml
