--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 github.client.id=f6d803ab4899d0fab50a
-github.client.secret=f664b28a7c258a383dcb8ef0e8c2032640715cff
+github.client.secret=
 github.redirectUri=http://192.168.0.115:8080/callback/
 spring.datasource.url=jdbc:mysql://localhost:3306/forum
 spring.datasource.username=root
